--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,70 @@
 page-home {
+    .flex-container2 {
+       
+      
+        background-image: url(../../assets/imgs/try3.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+   
+       
+      }
+      .logoContainer{
+        display: flex;
+        height: 30vh;
+        width: 100vh;
+      
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        position: absolute;
+        
+      }
+      .logo{
+        display: flex;
+        height: 20vh;
+        width:50vw;
+        background-image: url('../../assets/imgs/l1.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+        position: absolute;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      }
+   
+    .butt{
+  
+      height: 10%;
+      width: 100%;
+      display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-direction: row;
+        position: absolute;
+        bottom: 0;
+      .btn {
+        background-color: #000000;
+        border-radius: 10px;
+        width: 50%;
+        height: 50%;;
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        flex-direction: row;
+      
+    
+      }
+      
+    }
+    
+    
 
 }
